# falba-py

./: Justfile  README.md  __init__.py  derivers.py  enrichers.py  limmat.toml  model.py  pyproject.toml  test_enrichers.py  util.py
cmd/falba/: main.go
falba/: go.mod  go.sum
falba/pkg/cel/: eval.go
falba/pkg/derivers/: derivers.go
falba/pkg/enrichers/: enrichers.go
falba/pkg/model/: model.go
falba/pkg/utils/: utils.go
src/falba/: __init__.py  cli.py  derivers.py  enrichers.py  main.py  model.py  test_enrichers.py  util.py
src/falba/testdata/nixos-asi-benchmarks:1132dc1b00b0/artifacts/: fio_output_ext4_1.json  fio_output_ext4_2.json  fio_output_ext4_3.json  fio_output_ext4_4.json  fio_output_ext4_5.json  fio_output_tmpfs_1.json  fio_output_tmpfs_2.json  fio_output_tmpfs_3.json  fio_output_tmpfs_4.json  fio_output_tmpfs_5.json
src/falba/testdata/nixos-asi-benchmarks:5a8981fe0db7/artifacts/: etc_os-release  fio_output_ext4_1.json  fio_output_ext4_2.json  fio_output_ext4_3.json  fio_output_ext4_4.json  fio_output_ext4_5.json  fio_output_tmpfs_1.json  fio_output_tmpfs_2.json  fio_output_tmpfs_3.json  fio_output_tmpfs_4.json  fio_output_tmpfs_5.json
src/falba/testdata/nixos-asi-benchmarks:5c7460de41d7/artifacts/: fio_output_ext4_1.json  fio_output_ext4_2.json  fio_output_ext4_3.json  fio_output_ext4_4.json  fio_output_ext4_5.json  fio_output_tmpfs_1.json  fio_output_tmpfs_2.json  fio_output_tmpfs_3.json  fio_output_tmpfs_4.json  fio_output_tmpfs_5.json
src/falba/testdata/nixos-asi-benchmarks:5d55d6acea77/artifacts/: fio_output_ext4_1.json  fio_output_ext4_2.json  fio_output_ext4_3.json  fio_output_ext4_4.json  fio_output_ext4_5.json  fio_output_tmpfs_1.json  fio_output_tmpfs_2.json  (+3 more)
(+54 files in other folders)
