[project]
name = "falba"
version = "0.1.0"
dependencies = ["pandas"]
readme = "README.md"
requires-python = ">=3.12"

[dependency-groups]
dev = [
    "pyright>=1.1.401",
    "ruff>=0.11.11",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]