[project]
name = "falba"
version = "0.1.0"
dependencies = ["pandas"]
readme = "README.md"
requires-python = ">=3.12"

[dependency-groups]
dev = [
    "pyright>=1.1.401",
    "pytest>=8.3.5",
    "ruff>=0.11.11",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
falba = "falba.cli:main" # This is the crucial part

[tool.ruff.lint]
select = ["ANN", "I", "UP"]
[tool.ruff.lint.flake8-annotations]
# Don't require functions that implicitly return None to declare this
suppress-none-returning = true
